# ETL-Pipeline

./: .gitignore  PLAN.md  README.md  client.py  docker-compose.yml  main.py  mock_server.py  pipeline.py  pyproject.toml  pytest.ini  requirements.txt  server.py  utils.py
config/: settings.py
docker/airflow/: Dockerfile
docker/spark/: Dockerfile
docker/unity-catalog-bootstrap/: bootstrap_uc_rest.sh
docker/unity-catalog-ui/: Dockerfile
ingestion/: batcher.py  websocket_client.py  websocket_consumer.py
load/: postgres_writer.py
orchestration/: airflow_dag.py
processing/: spark_job.py  uc_registrar.py
schema/: schema.sql
storage/: minio_client.py
tests/: test_airflow_dag.py  test_batcher.py  test_event_validation.py  test_minio_client.py
transform/: event_handlers.py  schema_validator.py
