[project]
name = "etl-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow-providers-amazon==8.26.0",
    "apache-airflow-providers-apache-spark==4.11.0",
    "boto3==1.34.162",
    "botocore==1.34.162",
    "pandas==2.2.2",
    "pyarrow==17.0.0",
    "pyspark==3.5.1",
    "pytest==8.3.2",
    "websockets==12.0",
]
